--- a/css/style.css
+++ b/css/style.css
@@ -35,4 +35,26 @@ header ul {
     display: flex;
 } 
 
+header ul li {
+    margin: 10px;
+}
 
+
+.categorias {
+    background-color: #181818;
+    color: orangered;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    border: solid 2px;
+}
+
+.categorias li {
+    margin-right: 10px;
+    margin-left: 10px;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0px;
+}
