--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,14 @@ header {
     background-color: #5a5a5a;
     color: #fff;
     display: flex;
+    justify-content: center;
+}
+
+.header2 {
+    width: 80%;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
 }
 
@@ -50,10 +57,24 @@ header ul li a {
 
 
 .barra-pesquisa {
-    width: 350px;
-    height: 40px;
+    width: 700px;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    outline: none;
+}
+.searc{
+    position: relative;
 }
 
+.searc svg{
+    position: absolute;
+    top: 13px;
+    font-size: 18px;
+    color: #5a5a5a;
+    right: 1px;
+    cursor: pointer;
+}
 
 .categorias {
     padding: 10px;
@@ -75,36 +96,42 @@ header ul li a {
     font-weight: 400;
     letter-spacing: 0px;
 }
-.xd{
+
+.xd {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #5a5a5a;
     padding: 15px 0
 }
-.cardlist{
+
+.cardlist {
     width: 100%;
     display: flex;
     justify-content: center;
     color: #fff;
     font-size: 35px;
 }
-.cardlist h3{
+
+.cardlist h3 {
     font-size: 14px;
     margin: 0;
 }
-.cardo{
+
+.cardo {
     display: flex;
     width: 300px;
 }
 
-svg{
+svg {
     margin: 0 15px;
 }
-.cardlist span{
+
+.cardlist span {
     color: #272727;
 }
-a{
+
+a {
     text-decoration: none !important;
     color: #fff !important;
 }
