--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 ul {
     list-style: none;
     display: flex;
-    margin: 0 !important;
 }
 
 a {
@@ -29,14 +28,7 @@ header {
     background-color: #5a5a5a;
     color: #fff;
     display: flex;
-    justify-content: center;
-}
-
-.header2 {
-    width: 80%;
-    display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 20px;
 }
 
@@ -57,24 +49,10 @@ header ul li a {
 
 
 .barra-pesquisa {
-    width: 700px;
-    border-radius: 5px;
-    border: none;
-    padding: 10px;
-    outline: none;
-}
-.searc{
-    position: relative;
+    width: 350px;
+    height: 40px;
 }
 
-.searc svg{
-    position: absolute;
-    top: 13px;
-    font-size: 18px;
-    color: #5a5a5a;
-    right: 1px;
-    cursor: pointer;
-}
 
 .categorias {
     padding: 10px;
@@ -97,41 +75,47 @@ header ul li a {
     letter-spacing: 0px;
 }
 
-.xd {
+.compre-por-tamanho {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(31, 31, 31);
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: #5a5a5a;
-    padding: 15px 0
+    padding: 5px;
+}
+span {
+    color: #ff7300;
+    margin: 4px;
+    margin-right: 15px;
 }
 
-.cardlist {
-    width: 100%;
+select {
+    border: solid 2px #ff7300;
+    padding: 3px;
+    background-color: black;
+    color: white;
+    font-weight: 300;
+}
+
+.compre-por-tamanho div {
+    margin: 15px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    font-weight: 700;
+}
+
+.compre-por-tamanho div a {
+    text-decoration: none;
     color: #fff;
-    font-size: 35px;
 }
 
-.cardlist h3 {
-    font-size: 14px;
-    margin: 0;
-}
 
-.cardo {
-    display: flex;
-    width: 300px;
-}
-
-svg {
-    margin: 0 15px;
-}
-
-.cardlist span {
-    color: #272727;
-}
-
-a {
-    text-decoration: none !important;
-    color: #fff !important;
-}
